--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,19 @@
 body {
-  background: #efdec1;
+  background: #118bbb;
   font-size: 14px;
   font-family: Verdana, sans-serif;
 }
 
 .container {
-  width: 400px;
+  width: 380px;
   margin: 8px auto;
   background: white;
-  border-radius: 4px;
-  padding: 16px;
+  border-radius: 10px;
+  padding: 30px;
 }
 
 #question {
-  margin-bottom: 16px;
+  margin-bottom: 30px;
   font-weight: bold;
 }
 
@@ -24,13 +24,29 @@ body {
 }
 
 #choices > li {
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 3px solid rgb(19, 29, 168);
+  border-radius: 14px;
   padding: 10px;
   margin-bottom: 10px;
   cursor: pointer;
 }
 
 #choices > li:hover {
-  background: #f8f8f8;
+  background: #11b1d8;
+}
+
+#btn {
+  background: #3498db;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+  color: white;
+  box-shadow: 0 4px 0 #2880b9;
+}
+
+#btn.disabled {
+  background: #ccc;
+  box-shadow: 0 4px 0 #bbb;
+  opacity: 0.7;
 }
