--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
   background: white;
   border-radius: 10px;
   padding: 30px;
+  position: relative;
 }
 
 #question {
@@ -43,7 +44,7 @@ body {
 }
 
 #choices > li.correct::after {
-  content: '...Good!';
+  content: 'Awwwwwwwwwww';
 }
 
 #choices > li.wrong {
@@ -54,10 +55,10 @@ body {
 }
 
 #choices > li.wrong::after {
-  content: '...Wrong!';
+  content: '...kewwwwwwwwl';
 }
 
-#btn {
+#btn, #result > a {
   background: #3498db;
   padding: 8px;
   border-radius: 4px;
@@ -71,4 +72,32 @@ body {
   background: #ccc;
   box-shadow: 0 4px 0 #bbb;
   opacity: 0.7;
+}
+
+#result {
+  position: absolute;
+  width: 300px;
+  background: #fff;
+  padding: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  top: 50px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  border-radius: 4px;
+  text-align: center;
+  transition: 0.4s;
+}
+
+#result.hidden {
+  transform: translateY(-500px);
+}
+
+#result > p {
+  font-size: 24px;
+}
+
+#result > a {
+  display: block;
+  text-decoration: none;
 }
